--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,9 @@
   </head>
 
   <body>
-    <%= render logged_in? ? 'shared/after_login_header' : 'shared/before_login_header' %>
+    <% if show_header? %>
+      <%= render logged_in? ? 'shared/after_login_header' : 'shared/before_login_header' %>
+    <% end %>
     
     <% if flash.present? %>
       <div class="container mt-3">
