--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,8 +1,6 @@
 <header>
-  <nav class="navbar navbar-expand-lg navigation navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navigation">
     <div class="container">
-      <%= link_to "TriPlanner", root_path, class: "navbar-brand" %>
-      
       <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -11,11 +9,15 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto main-nav align-items-center">
           <li class="nav-item">
-            <%= link_to "ログイン", login_path, class: "nav-link" %>
+            <%= link_to login_path, class: "nav-link" do %>
+              <i class="bi bi-box-arrow-in-right me-1"></i>ログイン
+            <% end %>
           </li>
 
           <li class="nav-item">
-            <%= link_to "新規登録", new_user_path, class: "nav-link" %>
+            <%= link_to new_user_path, class: "btn btn-light signup-btn" do %>
+              <i class="bi bi-person-plus me-1"></i>新規登録
+            <% end %>
           </li>
         </ul>
       </div>
